# adventofcode2023

./: README.md  pyproject.toml
src/day00/: README.md  data.json  solution.py
src/day01/: README.md  solution1.py  solution2.py
src/day02/: README.md  solution1.py  solution2.py
src/day03/: README.md  solution1.py  solution2.py
src/day04/: README.md  solution1.py  solution2.py
src/day05/: README.md  solution1.py  solution2.py
src/day06/: README.md  solution1.py  solution2.py
