[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = "AOC 2023 solutions"
authors = ["Kyle O'Malley <j.kyle.omalley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
